# faqBot

./: README.md  pyproject.toml
faqbot/: bot.py
test/: test_bot.py
test/assets/: test_faq.md
